# cliqq-cli

./: .gitignore  LICENSE  README.md  action.py  ai.py  commands.py  main.py  prep.py  pyproject.toml  requirements.txt  styles.py
src/cliqq/: __main__.py  action.py  ai.py  classes.py  commands.py  io.py  log.py  main.py  models.py  prep.py  safety_rules.json  styles.py
src/cliqq/templates/: reminder_template.txt  starter_template.txt
templates/: reminder_template.txt  starter_template.txt
tests/: ai_test.py  conftest.py  test_action.py  test_ai.py  test_commands.py  test_main.py  test_prep.py
