[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "cliqq"
version = "0.0.1"
dependencies = [
  "openai>=1.108.1",
  "prompt_toolkit>=3.0.52",
  "psutil>=7.1.0",
  "python-dotenv>=1.1.1",
]
authors = [{ name = "Tobi Adesanya", email = "tobijadesanya@gmail.com" }]
description = "a simple command line chat assistant"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

keywords = ["cli", "chatbot", "openai", "assistant"]

[project.urls]
Homepage = "https://github.com/tobiia/cliqq-cli"

# console entry point
[project.scripts] # pip create executable cliqq on install
cliqq = "cliqq.main:safe_main" # import cliqq.main, call main()

# cliqq is importable even without installing
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
